2020-10-17  Jean Brefort  <jean.brefort@normalesup.org>

	* src/sheet-object-graph.c (gnm_sog_bounds_changed): fix graph size issue
	when the graph is in its own sheet. [#516]

2020-10-15  Morten Welinder  <terra@gnome.org>

	* src/stf-parse.c (stf_parse_sheet): Don't try to parse entries
	with single quote or equal sign as numbers; use stf_cell_set_text.
	(stf_parse_options_guess_formats): Skip entries with '=' also.

2020-10-12  Morten Welinder  <terra@gnome.org>

	* src/workbook-priv.h: Introspection doesn't like empty structs so
	throw it a bone.

	* src/stf-parse.c (stf_parse_options_guess_csv): Don't get
	confused over quotes in quoted text.  Fixes #537.

2020-10-04  Morten Welinder  <terra@gnome.org>

	* src/stf-parse.c (stf_parse_options_guess_csv): Don't trim
	spaces, see https://tools.ietf.org/html/rfc4180#section-2

	* src/workbook-view.c (workbook_view_save_as): If we don't get a
	modtime from the url, don't try to do anything with in.  Notably
	happens with fd://1

2020-08-12  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2020-08-12  Morten Welinder <terra@gnome.org>

	* Release 1.12.48

2020-08-08  Morten Welinder  <terra@gnome.org>

	* src/print-info.c (gnm_print_info_load_defaults): Don't return a
	value.

2020-07-16  Morten Welinder  <terra@gnome.org>

	* src/gui-util.c (gnm_dialog_setup_destroy_handlers): Fix
	potential 64-bit problem.
	(cb_gnm_dialog_setup_destroy_handlers): Ditto.

2020-07-12  Morten Welinder  <terra@gnome.org>

	* src/sstest.c (test_recalc): New test for dependency tracking.

2020-07-07  Morten Welinder  <terra@gnome.org>

	* src/sheet.c (sheet_queue_redraw_range): Ignore requests during
	loading of a file.

2020-07-06  Morten Welinder  <terra@gnome.org>

	* src/dependent.c (bucket_start_row): Improve performance.

2020-07-04  Morten Welinder  <terra@gnome.org>

	* src/workbook.c (workbook_get_sheet_size): When sheets are not
	uniform size, return largest possible.
